test/envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: service
                      domains: ["*"]
                      cors:
                        allow_origin_string_match:
                          - safe_regex:
                              google_re2: {}
                              regex: ".*"
                        allow_methods: "GET, POST, OPTIONS"
                        allow_headers: "X-API-Version, Content-Type"
                        expose_headers: "X-API-Version"
                      routes:
                        - match:
                            prefix: "/getresult/"
                            headers:
                              - name: "X-API-Version"
                                string_match:
                                  exact: "1.0.38"
                          route:
                            cluster: service_bv1
                        - match:
                            prefix: "/getresult/"
                            headers:
                              - name: "X-API-Version"
                                string_match:
                                  exact: "1.0.45"
                          route:
                            cluster: service_bv2
                        - match:
                            prefix: "/getresult/"
                          route:
                            cluster: service_bv1
                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: service_bv1
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_bv1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: service-bv1
                      port_value: 5001

    - name: service_bv2
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_bv2
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: service-bv2
                      port_value: 5002
